--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/server.js",
-		"dev": "npx nodemon ./src/server.js"
+    "start": "node src/app.js",
+		"dev": "npx nodemon src/app.js"
   },
   "repository": {
     "type": "git",
